scribble-assertions/src/test/resources/bad/extensions/annotations/ChoiceOutOfScopeVar2.scr
module bad.extensions.annotations.ChoiceOutOfScopeVar2;


type <java> "java.lang.Integer" from "rt.jar" as Int;

// assert-core version of bad.extensions.annotations.ChoiceOutOfScopeVar
global protocol Proto1(role A, role B, role C)
{
rec Loop {
	choice at A {
		ADD(x:Int) from A to B;  
		ADD(z:Int) from B to C;
		RES(z2:Int) from A to C; @(z2 = z);  // CHECKME: unexpected model/sat check output
	} or {
		RES(y:Int) from A to B;
		RES(z1:Int) from B to C; 
		//RES(z3:Int) from A to C;  @(z3 = z2);
		continue Loop;
		}
	}
}